[package]
name = "server"
version = "0.1.0"
authors = ["ozbe <1372945+ozbe@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false, features = ["alloc"] }
pretty_env_logger = "0.4"
tokio = { version = "0.2", features = ["macros", "time"] }
warp = "0.2.3"